--- a/appendices/fiber_bundles.tex
+++ b/appendices/fiber_bundles.tex
@@ -182,7 +182,7 @@ We will prove that $f$ is a bundle map, but it isn't a homeomorphism, although $
 
 First of all, $f_0$ is trivially a homeomorphism and it is easy to see that $h_n$ is always a homeomorphism, since it is bijective and linear on clopen subsets of $F$. Now, let us prove that $f$ is continuous. It then will immediately follow that $f$ is also a bundle map, since $\pi_1\circ f=\pi_1$.
 
-We will first define the function $g_f:B\times F\to F$, with $g_f:=\pi_2\circ f$. Notice that $g_f(x,a)=f_x(a)$ for every $(x,a)\in B\times F$. Since $F$ is Hausdorff and locally compact, the space $Top(F,F)$, topologised with the compact-open topology has the following properties, as we proved in Proposition~\ref{prop:exponential_object}:
+We will first define the function $g_f:B\times F\to F$, with $g_f:=\pi_2\circ f$. Notice that $g_f(x,a)=f_x(a)$ for every $(x,a)\in B\times F$. Since $F$ is Hausdorff and locally compact, the space $Top(F,F)$, topologised with the compact-open topology has the following properties, as we proved in Corollary~\ref{cor:exp_obj_prop}:
 \begin{itemize}
 \item The evaluation map $ev:\mathrm{Top}(F,F)\times F\to F$, defined by $(f,x)\mapsto f(x)$ is continuous.
 \item For every topological space $T$ and any function $g:T\times F\to F$, there exists a unique function $g^{\#}:T\to\mathrm{Top}(F,F)$ such that $g=ev\circ(g^{\#}\times 1_F)$.
@@ -199,7 +199,7 @@ F
 which proves that $g_f^{\#}=\tilde{g}_f$, due to the uniqueness property. Thus, $g_f$ is continuous, if and only if $\tilde{g}_f$ is continuous., which is equivalent to $\lim_{n\to\infty}h_n=1_F$ in $\mathrm{Top}(F,F)$.
 
 In order to show this, we need to prove that every open neighborhood of $1_F$ contains every $h_n$ for some big enough $n$. In fact, it suffices to check this only for these neighborhoods of $1_F$ that are elements in a subbasis of the topology of $\mathrm{Top}(F,F)$, so we will only regard open sets in the following family:
-\[\Big\{S(K,O):=\{f:K\to O\,|\,f(K)\subseteq O\}\ \Big|\ K,O\subseteq F,\ K\text{ compact},\ O\text{ open}\Big\}\]
+\[\Big\{S(K,O):=\{f\in\mathrm{Top}(F,F)\,|\,f(K)\subseteq O\}\ \Big|\ K,O\subseteq F,\ K\text{ compact},\ O\text{ open}\Big\}\]
 Let $S(K,O)$ be such a set in the neighborhood of $1_F$. This means that $K\subseteq O$. First of all, notice, that there exists some $n_1\in\mathbb{N}$ such that $\frac{1}{3^n}<\min K$ for all $n\geq n_1$. We now examine the following two cases:
 \begin{itemize}
 \item[$1\not\in K$:] In this case, there exists also a $n_2\in\mathbb{N}$ such that $1-\frac{1}{3^n}>\max K$ for all $n\geq n_2$. This means that $K\subseteq[\frac{2}{3^n},1-\frac{2}{3^n}]$ for all $n\geq\max\{n_1,n_2\}$, which means that $h_n(K)=K\subseteq O$, i.e. $h_n\in S(K,O)$.
@@ -220,8 +220,6 @@ Let $V_n:=[1-\frac{1}{3^n},1]\cap F$. This is both open and compact, so $S(V_n,V
 \end{example}
 
 As we've seen in Theorem~\ref{thm:inverse}, we know some sufficient conditions in order to lift the pathology of the inverse mapping not being continuous, so we will now prove that the above example wouldn't fail if $F$ was also locally connected in addition to being Hausdorff and locally compact:
-
-%We will now prove the following theorem, which is based on Theorem~4 in \cite{top_group} which proves the continuity of the inverse operator on $\mathrm{Top}(F,F)$, provided that $F$ has some good properties
 
 \begin{theorem} Let $F$ be a Hausdorff, locally compact, locally connected topological space and let $p_1: E_1\to B$ and $p_2: E_2\to B$ be two fiber bundles with fibers $F_1$ and $F_2$ respectively, both isomorphic to $F$. Moreover, let $\phi:E_1\to E_2$ be a bundle map such that its restriction
 \[\phi_x:(F_1)_x\to (F_2)_x\]
@@ -264,7 +262,7 @@ F\ar[r,"\cong"']\ar[rrrrr,bend left=15,"\psi_x"]&\{x\}\times F_1\ar[r,"\cong"']&
 \end{itemize}
 Essentially, we have reduced the problem to the case of $E_1,E_2$ both being the trivial bundle $U\times F$ and $\psi:U\times F\to U\times F$.
 
-Now, we follow the same arguments we used in the Example~\ref{ex:counterexample}. First, define the continuous $g_{\psi}:U\times F\to F$ with $g_{\psi}=\pi_2\circ\psi$, i.e. $g_{\psi}(x,a)=\psi_x(a)$. Since $F$ is Hausdorff and locally compact, the space $\mathrm{Top}(F,F)$, topologised with the compact-open topology, together with the map $ev:\mathrm{Top}(F,F)\times F\to F$ has the final property proved in Proposition~\ref{prop:exponential_object}. So, there exists a unique continuous $g_{\psi}^{\#}:U\to\mathrm{Top}(F,F)$ making the following diagram commute:
+Now, we follow the same arguments we used in the Example~\ref{ex:counterexample}. First, define the continuous $g_{\psi}:U\times F\to F$ with $g_{\psi}=\pi_2\circ\psi$, i.e. $g_{\psi}(x,a)=\psi_x(a)$. Since $F$ is Hausdorff and locally compact, the space $\mathrm{Top}(F,F)$, topologised with the compact-open topology, together with the map $ev:\mathrm{Top}(F,F)\times F\to F$ has the universal property proved in Corollary~\ref{cor:exp_obj_prop}. So, there exists a unique continuous $g_{\psi}^{\#}:U\to\mathrm{Top}(F,F)$ making the following diagram commute:
 \begin{center}
 \begin{tikzcd}
 U\times F\ar[r,"g_{\psi}^{\#}\times 1_F"]\ar[d,"g_{\psi}"']&\mathrm{Top}(F,F)\times F\ar[dl,"ev"]\\
