local connected counterexample

--- a/appendices/topology.tex
+++ b/appendices/topology.tex
@@ -642,7 +642,7 @@ which means that $\mathrm{ev}(W)\subseteq U$ and thus proves that $\mathrm{ev}$ 
 \item The second step is to show that these choices for $X^A$ and $\mathrm{ev}$ satisfy the universal property of the remark~\ref{rem:universal_prop_exp}. Let $Z$ be any topological space and let $g:Z\times A\to X$ to be any continuous map. We then define $g^{\sharp}:Z\to\mathrm{Top}(A,X)$ to be the map taking $z$ to $g_z\in\mathrm{Top}(A,X)$, where $g_z$ is defined to be the unique map for which it is true that $g_z(a)=g(z,a)$ for every $a\in A$. Let us further divide the proof into steps:
 \begin{enumerate}
 \item First, we should show that $g^{\sharp}$ is well defined, i.e. that $g_z$ is a continuous function from $A$ to $X$, for every $z\in Z$. It is clear that $g_z$ has the right domain and codomain, so we only have to show that it is indeed continuous. Let us fix some $z\in Z$ and define $i_z:A\to Z\times A$ to be the function taking $a$ to $(z,a)$. This is continuous, as the composition of the isomorphism $\pi_2^{-1}:A\to\{z\}\times A$ and the inclusion $\{z\}\times A\to Z\times A$. So, $g_z$ is also continuous, as it is the composition $g_z=g\circ i_z$.
-\item Then, we should show that $g^{\sharp}$ is a continuous map. For that, fix some $z\in Z$ and let $S(K,U)\subseteq\mathrm{Top}(A,X)$ be a subbasic open neighborhood of $g^{\sharp}(z)$. This means that $K\subseteq A$ is compact, $U\subseteq X$ is open and $g_z(K)\subseteq U$, i.e. $g(\{z\}\times K)\subseteq U$. Since $g$ is continuous, $g^{-1}(U)\subseteq Z\times A$ is open. So, for now we know that $\{z\}\times K\subseteq g^{-1}(U)$ and our next goal is to find some open neighborhood $V$ of $z$ such that $V\times K\subseteq g^{-1}(U)$. For every $k\in K$ there exists some subbasic open set $V_k\times A_k\subseteq g^{-1}(U)$ containing $k$. This means that $\{z\}\times K\subseteq\bigcup_{k\in K}V_k\times A_k$ and since $\{z\}\times K\cong K$ is compact, there exists a finite set of indices $\{k_1,\ldots,k_n\}$ such that $\{z\}\times K\subseteq\bigcup_{i=1}^nV_{k_i}\times A_{k_i}$. Define $V:=\bigcap_{i=1}^nV_{k_i}$ and notice that for every $k'\in K$ there exists some $i$ such that $V\times\{k'\}\subseteq V_{k_i}\times A_{k_i}$. It is the same $i$ for which $(z,k')\in V_{k_i}\times A_{k_i}$. This means that $V\times K\subseteq g^{-1}(U)$ and so for every $z'\in V$ we have:
+\item Then, we should show that $g^{\sharp}$ is a continuous map. For that, fix some $z\in Z$ and let $S(K,U)\subseteq\mathrm{Top}(A,X)$ be a subbasic open neighborhood of $g^{\sharp}(z)$. This means that $K\subseteq A$ is compact, $U\subseteq X$ is open and $g_z(K)\subseteq U$, i.e. $\{z\}\times K\subseteq g^{-1}(U)$. Since $g$ is continuous, $g^{-1}(U)\subseteq Z\times A$ is open. Our next goal is to find some open neighborhood $V$ of $z$ such that $V\times K\subseteq g^{-1}(U)$. For every $k\in K$ there exists some subbasic open set $V_k\times A_k\subseteq g^{-1}(U)$ containing $k$. This means that $\{z\}\times K\subseteq\bigcup_{k\in K}V_k\times A_k$ and since $\{z\}\times K\cong K$ is compact, there exists a finite set of indices $\{k_1,\ldots,k_n\}$ such that $\{z\}\times K\subseteq\bigcup_{i=1}^nV_{k_i}\times A_{k_i}$. Define $V:=\bigcap_{i=1}^nV_{k_i}$ and notice that for every $k'\in K$ there exists some $i$ such that $V\times\{k'\}\subseteq V_{k_i}\times A_{k_i}$. It is the same $i$ for which $(z,k')\in V_{k_i}\times A_{k_i}$. This means that $V\times K\subseteq g^{-1}(U)$ and so for every $z'\in V$ we have:
 \[g_{z'}(K)=g(\{z'\}\times K)\subseteq g(V\times K)\subseteq U\]
 and thus $g^{\sharp}(V)\subseteq S(K,U)$, which proves that $g^{\sharp}$ is continuous.\qedhere
 \end{enumerate}
@@ -654,15 +654,28 @@ and thus $g^{\sharp}(V)\subseteq S(K,U)$, which proves that $g^{\sharp}$ is cont
 \begin{proof} We already proved in lemma~\ref{lem:smaller_compact_nbh} that $\mathrm{ev}$ is continuous and that the continuity of $g$ implies the continuity of $g^{\sharp}$. We only have to show that if $g^{\sharp}$ is continuous, $g$ is also continuous, which is true, since $g=\mathrm{ev}\circ(g^{\sharp}\times1_A)$.
 \end{proof}
 
-We have now proved that there exist some sufficient conditions for $A$ in order for the sets $\mathrm{Top}(A,X)$ to have a nice topology, for all $X$. An interesting case arises when $X=A$ and when we restrict ourselves to the topological subspace of the automorphisms of $A$, denoted by $\mathrm{Hom}(A)$ or $\mathrm{Aut}(A)$, i.e. the set of all invertible bicontinuous functions from $A$ to $A$, topologised as a subspace of $\mathrm{Top}(A,A)$. In this set, there exists a natural binary operation, namely the composition:
+We have now proved that there exist some sufficient conditions for $A$ in order for the sets $\mathrm{Top}(A,X)$ to have a nice topology, for all $X$. An interesting case arises when $X=A$ and when we restrict ourselves to the topological subspace of the automorphisms of $A$, denoted by $\mathrm{Hom}(A)$ or $\mathrm{Aut}(A)$, i.e. the set of all invertible bicontinuous functions from $A$ to $A$, topologised as a subspace of $\mathrm{Top}(A,A)$. In this set, there exists a natural binary operation, namely the composition, which can easily be proven to be continuous:
+\begin{proposition} Let $A$ be a locally compact Hausdorff space and let $\mathrm{Hom}(A)$ be topologized with the compact-open topology. Then the composition:
 \[\circ:\mathrm{Hom}(A)\times\mathrm{Hom}(A)\to\mathrm{Hom}(A)\]
-which is also continuous in the compact-open topology. It is only natural to ask ourselves if $\mathrm{Hom}(A)$ equipped with the compact-open topology, together with the composition is a topological group. For that we only need to check the continuity of the inverse function:
+is continuous.
+\end{proposition}
+\begin{proof} Let $f,g\in\mathrm{Hom}(A)$ and let $S(K,U)$ be a subbasic neighborhood of $f\circ g$. This means that $K$ is compact, $U$ is open and $g(K)\subseteq f^{-1}(U)$. Our goal is to find some open $V$ and some compact $L$ such that
+\[g(K)\subseteq V\subseteq L\subseteq f^{-1}(U)\]
+Then, $S(L,U)\times S(K,V)$ would be an open neighborhood of $(f,g)$ for which $(f',g')\in S(L,U)\times S(K,V)$ would imply that $f'\circ g'\in S(K,U)$, i.e. that $\circ$ is continuous.
+
+Let us now find $V,L$. Notice that since $f$ is continuous, $f^{-1}(U)$ is open. So, for every $x\in g(K)$, we can use lemma~\ref{lem:smaller_compact_nbh} and find some open neighborhood $V_x$ of $x$, such that $V_x^-$ is compact and $x\in V_x\subseteq V_x^-\subseteq f^{-1}(U)$. So, we have that $K\subseteq\bigcup_{x\in g(K)}V_x$. Notice that since $g$ is continuous, $g(K)$ is compact, so there exists a finite set of indices $\{x_1,\ldots,x_n\}$, such that $g(K)\subseteq\bigcup_{i=1}^nV_{x_i}$. Define $V=\bigcup_{i=1}^nV_{x_i}$ and notice that $V^-=\bigcup_{i=1}^nV_{x_i}^-$ is compact.
+\end{proof}
+
+
+
+It is only natural to ask ourselves if $\mathrm{Hom}(A)$ equipped with the compact-open topology, together with the composition is a topological group. For that we only need to check the continuity of the inverse function:
 \[(-)^{-1}:\mathrm{Hom}(A)\to\mathrm{Hom}(A)\]
 Interestingly enough this is not true in general, as exhibited in \cite{counterexample}. Based on their counterexample, we present a somewhat simpler construction in \ref{ex:counterexample} around the same pathology, also involving fiber bundles. Our goal here is to finish this chapter by giving some sufficient conditions for $\Hom(A)$ to be a topological group. The proof is based on the proof of Theorem~4 in \cite{top_group}. We first need the following definition.
 
-\begin{definition} A topological space $X$ is called \emph{locally connected}, if every $x$ has an open connected neighborhood $U$.
+\begin{definition} A topological space $X$ is called \emph{locally connected}, if for every $x\in X$ and every neighborhood $N$ of $x$, there exists some open connected neighborhood $U$ of $x$, such that $U\subseteq N$.
 \end{definition}
-\begin{remark} Notice that a connected space is not always locally connected.
+\begin{remark} Of course, local connectedness does not imply connectedness, but notice that the reverse isn't true as well. Take for example this subset of $\mathbb{R}^2$: \[\big([0,1]\times\{0\}\big)\cup\big(\{0\}\times[0,1]\big)\cup\bigcup_{n=1}^{\infty}\left(\left\{\frac{1}{n}\right\}\times[0,1]\right)\]
+equipped with the subspace topology. Then, it is connected, but all open neighborhoods of $(1,0)$ contained in the open upper half-space are not connected.
 \end{remark}
 
 \begin{theorem}\label{thm:inverse} Let $A$ be a locally connected, locally compact Hausdorff space and let $\mathrm{Hom}(A)$ be topologised with the compact-open topology. Then the inverse function:
